# ProjectNotKnow

./: .gitignore  CMakeLists.txt  README.md
config/: db_config.json
include/: db_info.hpp
projectunknown/: Cargo.toml
reine/: Cargo.toml  README.md  pubspec.yaml
reine/android/app/: build.gradle
reine/android/app/src/main/: AndroidManifest.xml
reine/android/app/src/main/kotlin/com/reinerina/reine/: MainActivity.kt
reine/ios/Runner/: Info.plist
reine/ios/Runner.xcodeproj/: project.pbxproj
reine/lib/: main.dart
reine/lib/notifiers/: global_notifiers.dart  page_notifier.dart  preferences.dart  preferences_notifier.dart  theme_notifier.dart
reine/lib/views/: insert.dart  search.dart  settings.dart  views.dart
reine/linux/: CMakeLists.txt  my_application.cc
reine/macos/Runner.xcodeproj/: project.pbxproj
reine/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
reine/macos/Runner/Configs/: AppInfo.xcconfig
reine/src/: app.rs  lib.rs  main.rs
reine/src/views/: insert_view.rs  mod.rs
reine/web/: index.html  manifest.json
reine/windows/: CMakeLists.txt
reine/windows/runner/: Runner.rc  main.cpp
src/db_config/: db_info.cpp  db_info.hpp
src/db_insert/: insert.cpp  insert_passage.cpp  insert_summary.cpp
src/db_select/: search.cpp
