[package]
name = "reine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pretty_env_logger = "0.5.0"
log = "0.4.22"
egui = "0.29.0"
egui-wgpu = "0.29.0"
egui_extras = "0.29.0"
egui-winit = { version = "0.29.0", default-features = false }
wgpu = "22.1.0"
winit = { version = "0.30.5", features = ["rwh_05"] }
bytemuck = "1.18.0"
glam = { version = "0.29.0", features = ["bytemuck"] }
fbxcel = "0.9.0"
tobj = { version = "4.0.2", default-features = false, features = ["async"] }
image = "0.25.2"
anyhow = "1.0.89"
glob = "0.3.1"
chrono = "=0.4.38"
rfd = "0.15.0"
async-std = "1.13.0"
rand = "0.8.5"
eframe = { version = "0.29.0",default-features = false ,features = ["wgpu", "default_fonts"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
egui-winit = "0.29.0"
bytemuck = { version = "1.18.0", features = ["aarch64_simd"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
egui-winit = "0.29.0"
bytemuck = { version = "1.18.0", features = ["nightly_stdsimd"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = { version = "1.18.0", features = ["wasm_simd"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.29.0", default-features = false , features = ["bytemuck", "links", "smithay-clipboard", "webbrowser"]}
reqwest = "0.12.7"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["Document", "Window", "Element", "Location"] }
wgpu = { version = "22.1.0", features = ["webgpu", "webgl"] }
web-time = "1.1.0"
